netcfg (0.15) unstable; urgency=low

  * NOT YET RELEASED
  * remove util.[ch] (functions now in libdebian-installer)

 -- David Kimdon <dwhedon@debian.org>  Thu,  5 Sep 2002 20:34:34 -0700

netcfg (0.14) unstable; urgency=low

  * Rebuild for new cdebconf
  * Danish templates thanks to Claus Hindsgaul

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 21 Aug 2002 19:06:16 +0200

netcfg (0.13) unstable; urgency=low

  * French templates thanks to 
    Philippe Batailler <pbatailler@teaser.fr> (closes: #138073)
  * some build cleanup
  * tfheen: Use libdebian-installer, thanks to thomas poindessous
  * tfheen: Add libdebian-installer-dev to build-depends.
  * tfheen: Change cdebconf-dev to libcdebconf-dev.
  * tfheen: Change maintainer to debian-boot, add David Kimdon and Tollef
    Fog Heen to Uploaders.
  * tfheen: Fix rules file to not munge the templates.
  * tfheen: get rid of emacs changelog variables
  * cjwatson: Correct dpkg-gencontrol call so it picks up ${shlibs:Depends}.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 23 Jul 2002 22:22:03 +0200

netcfg (0.12) unstable; urgency=low

  * Make netcfg-static actually work by calling num2dot at most once per
    sprintf, since num2dot uses a static buffer.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 29 Jan 2002 21:12:31 +0100

netcfg (0.11) unstable; urgency=low

  * use new dpkg features so build is less cludgy 
  * dhcp and static templates thanks to 
    ilgiz kalmetev <i.kalmetev@bis.bashtelecom.ru>
    (closes: #114843, #114844, #114845)

 -- David Kimdon <dwhedon@debian.org>  Mon,  7 May 2001 23:31:11 -0700

netcfg (0.10) unstable; urgency=low

  * fix broken handling of nameservers, build with cdebconf-dev. 

 -- David Whedon <dwhedon@debian.org>  Wed, 14 Feb 2001 20:33:40 -0800

netcfg (0.09) unstable; urgency=low

  * make necessary dirs at build time rather than runtime
  * call it dhclient rather than dhclient-2.2.x

 -- David Whedon <dwhedon@debian.org>  Tue,  6 Feb 2001 21:41:50 -0800
