@@ -2,6 +2,7 @@ netcfg (0.15) unstable; urgency=low
 
   * NOT YET RELEASED
   * remove util.[ch] (functions now in libdebian-installer)
+  * check hostname for rfc 1123 compliance
 
  -- David Kimdon <dwhedon@debian.org>  Thu,  5 Sep 2002 20:34:34 -0700
 
